--- a/index.html
+++ b/index.html
@@ -435,7 +435,15 @@
 		};
 	</script>
 
-
+<script>
+	$(document).ready(function(){
+      $('.slider').slider({
+		  full_width: false,
+		  Indicators: false
+		  
+						  });
+    });
+	</script>
 
 
 
